--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
   <head>
-    <title> kidai-dev.io </title>
+    <title> kidai.dev/io </title>
   </head>
-
-<body></body>
+  <body>
+    <h3>Hello World!</h3>
+  </body>
 </html>
